# tiny-keccak

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
benches/: kangaroo.rs  keccak.rs  sha3.rs  tiny-keccak.rs
comparison/: Cargo.toml
comparison/benches/: sha3.rs
examples/: simple.rs
src/: cshake.rs  fips202.rs  k12.rs  kangaroo.rs  keccak.rs  kmac.rs  lib.rs  parallel_hash.rs  sha3.rs  shake.rs  sp800.rs  tuple_hash.rs
tests/: cshake.rs  kangaroo.rs  keccak.rs  kmac.rs  sp800.rs  test.rs
