[package]
description = "An implementation of the FIPS-202-defined SHA-3 and SHAKE functions."
homepage = "https://github.com/debris/tiny-keccak"
license = "CC0-1.0"
name = "tiny-keccak"
version = "1.4.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
keywords = ["sha3", "sha-3", "keccak", "crypto", "tiny"]
categories = ["cryptography", "no-std"]

[dependencies]
crunchy = "0.1.6"

[profile.dev]
opt-level = 3  # Controls the --opt-level the compiler builds with
debug = false   # Controls whether the compiler passes `-g`

[profile.doc]
opt-level = 3  # Controls the --opt-level the compiler builds with
debug = false   # Controls whether the compiler passes `-g`

[profile.test]
opt-level = 3  # Controls the --opt-level the compiler builds with
debug = false   # Controls whether the compiler passes `-g`

[workspace]
members = ["comparison"]

[badges]
travis-ci = { repository = "debris/tiny-keccak", branch = "master"}
