[package]
edition = "2018"
description = "An implementation of the FIPS-202-defined SHA-3 and SHAKE functions."
homepage = "https://github.com/debris/tiny-keccak"
license = "CC0-1.0"
name = "tiny-keccak"
version = "1.5.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
keywords = ["sha3", "sha-3", "keccak", "crypto", "kangarootwelve"]
categories = ["cryptography", "no-std"]

[dependencies]
crunchy = "0.2.2"

[profile.dev]
opt-level = 3  # Controls the --opt-level the compiler builds with
debug = false   # Controls whether the compiler passes `-g`

[profile.test]
opt-level = 3  # Controls the --opt-level the compiler builds with
debug = false   # Controls whether the compiler passes `-g`

[workspace]
members = ["comparison"]

[badges]
travis-ci = { repository = "debris/tiny-keccak", branch = "master"}

[features]
default = ["keccak"]
keccak = []
k12 = []

[[test]]
name = "keccak"
required-features = ["keccak"]

[[test]]
name = "kangaroo"
required-features = ["k12"]

[[bench]]
name = "keccak"
required-features = ["keccak"]

[[bench]]
name = "kangaroo"
required-features = ["k12"]
